<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_purple1"
    android:padding="8dp">

    <FrameLayout
        android:id="@+id/userPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/user_preview_background"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/toggleVideo">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:src="@drawable/ic_buddy"/>

    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggleVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_with_video"
        android:textColor="@color/white"
        android:theme="@style/MySwitch"

        app:layout_constraintTop_toBottomOf="@+id/userPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toggleAudio"
        app:layout_constraintBottom_toTopOf="@id/etUserName"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggleAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_with_audio"
        android:textColor="@color/white"

        android:theme="@style/MySwitch"
        app:layout_constraintTop_toTopOf="@+id/toggleVideo"
        app:layout_constraintStart_toEndOf="@+id/toggleVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/toggleVideo"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintTop_toTopOf="@id/etUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etUserName"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"

        android:background="@drawable/edit_text_background"
        android:inputType="text"
        android:text="@string/default_user_name"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/toggleVideo"
        app:layout_constraintStart_toStartOf="@+id/etRoomId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etRoomId"/>

    <TextView
        android:id="@+id/roomId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_id"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintTop_toTopOf="@id/etRoomId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etRoomId"/>

    <EditText
        android:id="@+id/etRoomId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"

        android:background="@drawable/edit_text_background"
        android:inputType="text"
        android:text="@string/default_room_id"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:layout_constraintStart_toEndOf="@id/roomId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etClientHostName"/>

    <TextView
        android:id="@+id/clientHostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_host_name"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintTop_toTopOf="@+id/etClientHostName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etClientHostName"/>

    <EditText
        android:id="@+id/etClientHostName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"

        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"

        android:background="@drawable/edit_text_background"
        android:inputType="textUri|textMultiLine"
        android:maxLines="4"
        android:textColor="@color/white"
        android:text="@string/default_client_host_name"

        app:layout_constraintTop_toBottomOf="@id/etRoomId"
        app:layout_constraintStart_toEndOf="@+id/clientHostName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/joinBtn"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/etClientHostName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>